# data-analysis-experiment

./: LICENSE  README.md  analysis_prompt.j2  generate_graph_prompt.j2  graph_insights_prompt.txt  notebook.ipynb  pyproject.toml
claude3/: d1.txt  d10.txt  d2.txt  d3.txt  d4.txt  d5.txt  d6.txt  d7.txt  d8.txt  d9.txt
claude3/graphs/: d3.txt  d3_2_analysis.txt  d4.txt  d4_1_analysis.txt  d9.txt  d9_1_analysis.txt  scoring.txt
data/: d1.csv  d10.csv  d2.csv  d3.csv  d3.json  d4.csv  d4.json  d5.csv  d6.csv  d7.csv  d8.csv  d9.csv  d9.json
gemini1.5/: d1.txt  d10.txt  d2.txt  d3.txt  d4.txt  d5.txt  d6.txt  d7.txt  d8.txt  d9.txt
gemini1.5/graphs/: d3.txt  d3_1_analysis.txt  d4.txt  d4_2_analysis.txt  d9.txt  d9_3_analysis.txt  scoring.txt
gpt4/: d1.txt  d10.txt  d2.txt  d3.txt  d4.txt  d5.txt  d6.txt  d7.txt  d8.txt  d9.txt
gpt4/graphs/: d3.txt  d3_1_analysis.txt  d4.txt  d4_1_analysis.txt  d9.txt  d9_1_analysis.tst  scoring.txt
metadata/: d1.txt  d10.txt  d2.txt  d3.txt  d4.txt  d5.txt  d6.txt  d7.txt  d8.txt  d9.txt
sql/: d1.sql  d10.sql  d2.sql  d3.sql  d4.sql  d5.sql  d6.sql  d7.sql  d8.sql  d9.sql
